# todo

./: .dockerignore  .gitignore  Dockerfile  alembic.ini  compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: up.yml
app/: asgi.py  config.py
app/config/: __init__.py  app.py  base.py  paths.py
app/domain/: todos.py  user.py
app/infrastructure/application/: factory.py  plugins.py
app/infrastructure/database/: dto.py  repo.py  service.py  tables.py
app/infrastructure/database/migrations/: env.py
app/infrastructure/database/migrations/versions/: 67c6a5f11a3f_.py  b1578485e305_.py  cc14839cb62f_.py
app/presentation/rest/: __init__.py  todo.py  todos.py  user.py
app/presentation/web/: __init__.py  todos.py
app/presentation/web/templates/: base.html.j2  todo.html.j2  todos.html.j2
tools/: api.http
