[project]
name = "todo"
version = "0.0.0"
description = "Default template for PDM package"
authors = [
    {name = "Arwichok", email = "arwichok@gmail.com"},
]
dependencies = [
    "litestar[jinja,sqlalchemy,standard]>=2.8.3",
    "alembic>=1.13.1",
    "advanced-alchemy>=0.8.4",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
start = "litestar run"
dev = "litestar run -rd"
post_install = "pdm export -o requirements.txt --without-hashes"
act = "act"
