[project]
name = "todo"
version = "0.0.0"
description = "Default template for PDM package"
authors = [
    {name = "Arwichok", email = "arwichok@gmail.com"},
]
dependencies = [
    "litestar[jinja,sqlalchemy,standard]>=2.8.3",
    "alembic>=1.13.1",
    "advanced-alchemy>=0.8.4",
    "aiosqlite>=0.20.0",
    "environs>=11.0.0",
    "jinja2-fragments>=1.3.0",
    "asyncpg>=0.29.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}


[project.optional-dependencies]
dev = [
    "ruff>=0.4.9",
]
[tool.pdm]
distribution = false

[tool.pdm.scripts]
_.env = {LITESTAR_APP="app.asgi:app"}
_.env_file = ".env"
start = "litestar run"
dev = "litestar run -rd"
post_install = "pdm export -o requirements.txt --without-hashes"
act = "act"
build = "docker build -t ${DOCKER_IMAGE} ."
up = "docker compose --env-file=.env up "
migrate = "alembic upgrade head"
build_up = {composite = ["build", "up"]}